volexc/tests/ui/parse_missing_variant_index.out
Error: found '}' expected integer
   ╭─[ parse_missing_variant_index.vol:4:1 ]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
   │ 
   │ Note: Expected one of: integer
───╯